# nn-zero-to-hero-hands-on

./: pyproject.toml
exercises/makemore/: trigrams.ipynb
