[tool.poetry]
name = "nn-zero-to-hero-hands-on"
version = "0.1.0"
description = ""
authors = ["Stef Ruinard <stefruinard@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
torch = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
